--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ Verified Software Repository (VSR-net) Workshop, co-located with <i>ABZ</i>, 200
 received a B.E. and Diploma in Information Technology at GTU. 
 
 <p class="text">
-<a href="gen.html"><b>My academic genealogy</b></a>
+<!-- <a href="gen.html"><b>My academic genealogy</b></a> -->
 </p>
 <hr>
 
