--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ and <a href="papers/android-fm15.pdf">mobile platforms</a>, and <a href="papers/
 
 <p class="text">03/2019: Our paper is going to be published on 2nd Smart City Symposium 2019 in Bahrain  <a
 href="http://mse.isri.cmu.edu/software-engineering/Courses/17-651-models-of-software-development.html">
-A novel approach to mitigate IoT Gateway disconnectivity using fallback mechanism</a> with co-author Jaidip Kotak, Jatan Pathak, Yogesh Chudasama.<br>
+A novel approach to mitigate IoT Gateway disconnectivity using fallback mechanism</a> with co-author Jaidip Kotak, Jatan Pathak & Yogesh Chudasama.<br>
 </p>
 
 <!-- <p class="text"> <b>I am currently thinking about:</b> How do we -->
