--- a/index.html
+++ b/index.html
@@ -338,8 +338,8 @@ Verified Software Repository (VSR-net) Workshop, co-located with <i>ABZ</i>, 200
 
 <h2>Bio</h2>
 
-<p class="text"> Prior to joining GFSU, I spent one and half year working on Smart Bin and Smart Power Grid based IoT projects as IoT Engineer at 
- at <a href="http://www.us.toyota-itc.com/">NEPRA</a>. I
+<p class="text"> Prior to joining GFSU, I spent one and half year working on Smart Bin and Smart Power Grid based IoT projects as IoT Engineer at
+ <a href="http://www.us.toyota-itc.com/">NEPRA</a>. I
 received a B.E. and Diploma in Information Technology at GTU. 
 
 <p class="text">
