--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ and <a href="papers/android-fm15.pdf">mobile platforms</a>, and <a href="papers/
 <h2>News</h2>
 
 <p class="text">03/2019: Our paper is going to be published on 2nd Smart City Symposium 2019 in Bahrain  <a
-href="http://mse.isri.cmu.edu/software-engineering/Courses/17-651-models-of-software-development.html">
+href="https://www.smartcities2019.com/copy-of-program">
 A novel approach to mitigate IoT Gateway disconnectivity using fallback mechanism</a> with co-author Jaidip Kotak, Jatan Pathak & Yogesh Chudasama.<br>
 </p>
 
